--- a/octostreamcontrol/templates/octostreamcontrol_settings.jinja2
+++ b/octostreamcontrol/templates/octostreamcontrol_settings.jinja2
@@ -11,7 +11,7 @@ This file assumes that settings_plugin_octostreamcontrol is bound to OctoStreamC
 </p>
 
 <div id="settings_plugin_octostreamcontrol" class="settings-section">
-  <div class="stream-list" data-bind="foreach: settingsStreams">
+  <div class="stream-list" data-bind="foreach: settings.streams">
     <table class="stream-entry">
       <tr>
         <th>Stream Name</th>
