--- a/octostreamcontrol/templates/octostreamcontrol_settings.jinja2
+++ b/octostreamcontrol/templates/octostreamcontrol_settings.jinja2
@@ -80,47 +80,47 @@ This file assumes that settings_plugin_octostreamcontrol is bound to OctoStreamC
   <h4>YouTube Upload Settings</h4>
   <p>Configure global YouTube upload settings. Each stream can be individually enabled for upload.</p>
 
-  <table class="youtube-settings">
+  <table class="youtube-settings" data-bind="with: settings.youtube">
     <tr>
       <th>Enable YouTube Uploads</th>
       <td>
-        <input type="checkbox" data-bind="checked: settings.youtube.enabled" />
+        <input type="checkbox" data-bind="checked: enabled" />
       </td>
     </tr>
     <tr>
       <th>Client Secrets File</th>
       <td>
-        <input type="text" data-bind="value: settings.youtube.client_secrets_file" placeholder="/path/to/client_secrets.json" style="width: 100%;" />
+        <input type="text" data-bind="value: client_secrets_file" placeholder="/path/to/client_secrets.json" style="width: 100%;" />
       </td>
     </tr>
     <tr>
       <th>Credentials File</th>
       <td>
-        <input type="text" data-bind="value: settings.youtube.credentials_file" placeholder="/path/to/credentials.pickle" style="width: 100%;" />
+        <input type="text" data-bind="value: credentials_file" placeholder="/path/to/credentials.pickle" style="width: 100%;" />
       </td>
     </tr>
     <tr>
       <th>Default Video Title</th>
       <td>
-        <input type="text" data-bind="value: settings.youtube.default_title" placeholder="3D Print Timelapse - {job_name}" style="width: 100%;" />
+        <input type="text" data-bind="value: default_title" placeholder="3D Print Timelapse - {job_name}" style="width: 100%;" />
       </td>
     </tr>
     <tr>
       <th>Default Description</th>
       <td>
-        <textarea data-bind="value: settings.youtube.default_description" placeholder="3D print recorded on {date}" style="width: 100%; height: 60px;"></textarea>
+        <textarea data-bind="value: default_description" placeholder="3D print recorded on {date}" style="width: 100%; height: 60px;"></textarea>
       </td>
     </tr>
     <tr>
       <th>Default Category ID</th>
       <td>
-        <input type="text" data-bind="value: settings.youtube.default_category" placeholder="22" />
+        <input type="text" data-bind="value: default_category" placeholder="22" />
       </td>
     </tr>
     <tr>
       <th>Default Privacy</th>
       <td>
-        <select data-bind="value: settings.youtube.default_privacy">
+        <select data-bind="value: default_privacy">
           <option value="public">Public</option>
           <option value="unlisted">Unlisted</option>
           <option value="private">Private</option>
@@ -130,13 +130,13 @@ This file assumes that settings_plugin_octostreamcontrol is bound to OctoStreamC
     <tr>
       <th>Default Tags (comma-separated)</th>
       <td>
-        <input type="text" data-bind="value: settings.youtube.default_tags" placeholder="3d printing, timelapse, octoprint" style="width: 100%;" />
+        <input type="text" data-bind="value: default_tags" placeholder="3d printing, timelapse, octoprint" style="width: 100%;" />
       </td>
     </tr>
     <tr>
       <th>Authorization</th>
       <td>
-        <button class="btn btn-primary" data-bind="click: authorizeYouTube">
+        <button class="btn btn-primary" data-bind="click: $parent.authorizeYouTube">
           <i class="fa fa-key"></i> Authorize YouTube
         </button>
         <br/>
